...
                onClick = {
                          navigator.navigate(AddEditNoteScreenDestination(noteColor = -1, noteId = -1))
                },
                backgroundColor = Color.Yellow,
                modifier = Modifier.size(40.dp)
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add note", tint = Color.Black)
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
